--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "zustand": "^4.5.0",
-    "expo-location": "~16.5.3"
+    "expo-location": "~16.5.3",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
